updated bottom portion styling.

--- a/images/transform_tokens.css
+++ b/images/transform_tokens.css
@@ -153,8 +153,7 @@
 
 .mdco {
     background-color: var(--global-bg-blue-200);
-    margin-top: var(--global-none);
-
+    border-top: var(--global-none);
 }
 
 .mdco h2 {
