update css to reflect wanted changes

--- a/images/transform_tokens.css
+++ b/images/transform_tokens.css
@@ -4,6 +4,9 @@
     --global-txt-base: 16px;
     --global-txt-lg: 18px;
     --global-txt-xl: 24px;
+    --global-mh-txt: #fff;
+    --global-lib-brdr: #3b82f6;
+    --global-ph-bg: #fff;
 
     /* Switcher */
     --global-bg-gray-200: rgb(229 231 235);
@@ -68,105 +71,3 @@
     --global-pb-20: 80px;
 }
 
-
-.for-nav {
-    background-color: var(--global-bg-gray-200);
-    color: var(--global-text-black)
-}
-
-.fcareBtn {
-    color: var(--global-text-blue-500);
-    background-color: var(--global-bg-white);
-    font-weight: var(--global-text-semibold);
-    border-radius: var(--global-rounded-3xl);
-    padding: var(--global-pxy-63);
-    border: var(--global-border-blue-500);
-}
-
-.loginBtn {
-    color: var(--global-text-white);
-    background-color: var(--global-bg-blue-500);
-    font-weight: var(--global-text-semibold);
-    border-radius: var(--global-rounded-3xl);
-    padding: var(--global-pxy-63);
-    border: var(--global-border-blue-500);
-}
-
-.mstbg {
-    background-image: var(--global-hero-img);
-    background-position: var(--global-hero-pos);
-    height: var(--global-hero-height);
-}
-
-.mstbg h1 {
-    color: var(--global-text-white);
-    font-size: var(--global-text-size-5xl);
-    line-height: var(--global-h1-leading);
-}
-
-.mstbg p {
-    color: var(--global-text-white);
-    font-size: var(--global-text-lg);
-}
-
-.getStBtn {
-    border-radius: var(--global-rounded-3xl);
-    padding: var(--global-pxy-63);
-    background-color: var(--global-bg-green-500);
-    font-weight: var(--global-text-semibold);
-}
-
-.phNumBtn {
-    border-radius: var(--global-rounded-3xl);
-    padding: var(--global-pxy-63);
-    background-color: var(--global-bg-white);
-    font-weight: var(--global-text-semibold);
-    color: var(--global-text-blue-500);
-}
-
-.rets {
-    padding: var(--global-pad-96);
-    background-color: var(--global-feat-bg);
-    color: var(--global-feat-clr);
-}
-
-.feat-icon {
-    width: var(--global-ico-width);
-    height: var(--global-ico-height);
-    background-size: var(--global-ico-size);
-    background-repeat: var(--global-ico-rep);
-    background-position: var(--global-ico-pos);
-    filter: var(--global-ico-feat-fltr);
-}
-
-.feat-1 .feat-icon {
-    background-image: var(--global-ico-feat1);
-}
-
-.feat-2 .feat-icon {
-    background-image: var(--global-ico-feat2);
-}
-
-.feat-3 .feat-icon {
-    background-image: var(--global-ico-feat3);
-}
-
-.mdco {
-    background-color: var(--global-bg-blue-200);
-    border-top: var(--global-none);
-}
-
-.mdco h2 {
-    color: var(--global-text-blue-800);
-    font-size: var(--global-text-size-3xl);
-}
-
-.mdco p {
-    font-size: var(--global-txt-lg);
-
-}
-
-.mdco h3 {
-    font-weight: var(--global-text-semibold);
-    font-size: var(--global-text-size-xl);
-}
